# server/api/openapi-with-docs.json
@@ -1512,6 +1512,9 @@
           },
           "userID": {
             "type": "string"
+          },
+          "pending": {
+            "type": "boolean"
           }
         }
       },
@@ -1533,6 +1536,10 @@
           },
           "userID": {
             "type": "string"
+          },
+          "pending": {
+            "type": "boolean",
+            "nullable": true
           }
         }
       },
@@ -1555,6 +1562,10 @@
           },
           "userID": {
             "type": "string"
+          },
+          "pending": {
+            "type": "boolean",
+            "nullable": true
           }
         }
       },
